--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Generated files
+bin
+src/frontend/lexical-analysis/flex-scanner.c
+src/frontend/syntactic-analysis/bison-parser.h
+src/frontend/syntactic-analysis/bison-parser.c
