feat: compiler working + code for js generation
Co-Authored-By: JR-Castro <87036009+JR-Castro@users.noreply.github.com>
Co-Authored-By: gelewaut <75636169+gelewaut@users.noreply.github.com>
Co-Authored-By: Hugo LICHTENBERGER <76788589+LICHTENBERGERHugo@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ bin
 src/frontend/lexical-analysis/flex-scanner.c
 src/frontend/syntactic-analysis/bison-parser.h
 src/frontend/syntactic-analysis/bison-parser.c
+
+# Node
+node_modules
