chore: refactor graph code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "abstract-syntax-tree.h": "c",
         "generator.h": "c",
         "symboltable.h": "c",
-        "00-example-code": "c"
+        "00-example-code": "c",
+        "string.h": "c"
     }
 }
